new additions (settings...)
-added functional config system
-started work on the settings app

--- a/src/tablet_vue_js/public/config.json
+++ b/src/tablet_vue_js/public/config.json
@@ -3,13 +3,18 @@
     "standardTheme": "dark",
     "standardBackground": ""
   },
-  "settings": {
-    "lang": {
-      "appName": "Einstellungen",
-      "personalisationTab": {
-        "themeSetting": "Farbthema",
-        "bgSetting": "Hintergrundbild"
+  "apps": {
+    "settings": {
+      "title": "Settings",
+      "appPath": "/settings",
+      "lang": {
+        "themeTitle": "Color Theme",
+        "backgroundTitle": "Background Image"
       }
+    },
+    "banking": {
+      "title": "Banking",
+      "appPath": "/banking"
     }
   }
 }
